--- a/day3_bootstrap/No1.html
+++ b/day3_bootstrap/No1.html
@@ -9,7 +9,7 @@
     <!--    生产版本-->
     <!--    <link rel="stylesheet" href="static/plugins/bootstrap-5.3.2-dist/css/bootstrap.min.css">-->
 </head>
-<body>asd
+<body>
     <input type="button" value="提交">asdas
     <input type="button" value="提交" class="btn btn-primary">
     <input type="button" value="提交" class="btn btn-success">
