--- a/day3_bootstrap/No1.html
+++ b/day3_bootstrap/No1.html
@@ -60,5 +60,9 @@
     </div>
 </nav>
 
+<div class="btn-outline-success">
+    <input class="btn-success btn" type="button" value="Success"/>
+    <input class="border-black"/>
+</div>
 </body>
 </html>
